Refactor Accessory enum in DesignHierarchyMask and add more API to related interfaces